--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             const formData = new FormData();
             formData.append('image', selectedFile);
 
-            fetch('https://18e7-34-85-161-112.ngrok-free.app/upload_prescription', {
+            fetch('https://f0b9-34-85-161-112.ngrok-free.app/upload_prescription', {
                 method: 'POST',
                 body: formData
             })
