--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             })
             .catch(error => {
                 console.error('Error:', error);
-                document.getElementById('result').innerText = 'Error extracting medication and dosage.';
+                document.getElementById('result').innerText = 'Error extracting medication and dosage (UPDATE).';
             });
         }
     });
