--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
             result.innerText = 'Processing...';
 
-            fetch('https://f0b9-34-85-161-112.ngrok-free.app/upload_prescription', {
+            fetch('https://53aa-34-85-161-112.ngrok-free.app/upload_prescription', {
                 method: 'POST',
                 body: formData
             })
