--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
             result.innerText = 'Processing...';
 
-            fetch('https://53aa-34-85-161-112.ngrok-free.app/upload_prescription', {
+            fetch('https://d5c4-34-125-208-203.ngrok-free.app/upload_prescription', {
                 method: 'POST',
                 body: formData
             })
