--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <!-- Logo image -->
     <img src="https://cdn.vanderbilt.edu/vu-web/medschool-wpcontent/sites/66/2018/09/25044514/MIDP1100x400.png" alt="Logo" class="logo"> <!-- Replace with your logo URL -->
     
-    <h2>Extract Medication & Dosage</h2>
+    <h2>Extract Prescription Information from Image</h2>
 
     <div id="drop_zone">Drop an image here or click to upload</div>
     <input type="file" id="file_input" accept="image/*">
